--- a/blogapp-frontend/package.json
+++ b/blogapp-frontend/package.json
@@ -21,7 +21,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-toastify": "^10.0.5",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "redux-persist-expire": "^1.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
